# pokeapi-observability

./: .env.EXEMPLE  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: app.py
